--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,5 +15,11 @@
   "locationbanner": {
     "title": "In the Laurentian Mountains",
     "subtitle": "Chalet in Mont-Tremblant, Québec"
+  },
+  "propertydescription": {
+    "title": "At a glance",
+    "p1": "Chalet la Falaise is a versatile home that equally accommodates short and longer stays. The mezzanine can serve as a kids' playground. Updated baths stress functionality while the living space brings out homey comforts. Located away from hustle and bustle of the pedestrian village, the chalet nonetheless lies close to amenities of the nearby Old Village.",
+    "p2": "Our comfy three-bedroom home is tucked away on a country lane yet it lies within walking distance to shops and restaurants of the Old Village. Walk 200 m to a municipal bus stop or drive five minutes (4 km) to ski slopes (South Side). There is deeded access to Lake Moore. And the cottage is steps away from bike paths, nature trails, and a skating rink.",
+    "p3": "A sizable terrace is equipped with a BBQ and a table set for eight (summer only). You have access to a lockable small outdoor shed, perfect for sports equipment. Chalet la Falaise is family-owned. Couples will enjoy their romantic getaways while enough creature comforts await up to two families."
   }
 }
