--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -1,15 +1,181 @@
 {
   "header": {
     "title": "Chalet la Falaise",
-    "subtitle": "French culture in the heart of Québec"
+    "subtitle": "Francuska kultura w sercu Québec"
   },
   "amenities": {
-    "title": "Amenities",
+    "title": "Udogodnienia",
     "categories": {
       "theSpace": {
-        "title": "The Space",
-        "items": ["Master bedroom, Queen", "Guest bedroom, Queen"]
+        "title": "Przestrzeń",
+        "items": [
+          "Sypialnia główna, Queen",
+          "Sypialnia gościnna, Queen",
+          "Pokój dziecięcy, 2 łóżka pojedyncze",
+          "Salon, rozkładana sofa",
+          "Loft, rozkładana sofa",
+          "Pościel, koce, ręczniki",
+          "W pełni wyposażona kuchnia",
+          "Stół jadalny dla 8 osób",
+          "Barek śniadaniowy dla 2 osób",
+          "Łazienka na dole, prysznic",
+          "Łazienka na górze, wanna z prysznicem"
+        ]
+      },
+      "outside": {
+        "title": "Na zewnątrz",
+        "items": [
+          "Taras",
+          "Meble ogrodowe (lato)",
+          "Zestaw do grilla (lato)",
+          "Weranda wokół domu",
+          "Przyłączony szop",
+          "2 zarezerwowane miejsca parkingowe",
+          "Parking przy ulicy (lato)",
+          "Gniazdka do podgrzewaczy (120V)",
+          "Timer oświetlenia zewnętrznego",
+          "Usługa odśnieżania"
+        ]
+      },
+      "inside": {
+        "title": "Wewnątrz",
+        "items": [
+          "Kominek",
+          "Komin",
+          "Sufit katedralny",
+          "Indywidualne termostaty",
+          "Ogrzewanie elektryczne",
+          "Osuszacz powietrza i wymiennik powietrza",
+          "Klimatyzacja",
+          "Pralka, suszarka",
+          "Deska do prasowania",
+          "Suszarki do włosów",
+          "Żel pod prysznic, mydło, szampon"
+        ]
+      },
+      "bonus": {
+        "title": "Bonus",
+        "items": [
+          "Telewizja kablowa",
+          "HDTV, Blu-ray, CD",
+          "Biurko do pracy zdalnej",
+          "Stacja ładowania telefonu",
+          "Telefon, nieograniczone połączenia USA/Kanada",
+          "Internet Wi-Fi",
+          "Drukarka/kopiarka/faks/skaner",
+          "Materac dziecięcy, krzesełko do karmienia",
+          "Zakaz zwierząt",
+          "Zakaz palenia"
+        ]
       }
     }
+  },
+  "locationbanner": {
+    "title": "W Górach Laurentides",
+    "subtitle": "Chalet w Mont-Tremblant, Québec"
+  },
+  "propertydescription": {
+    "title": "W skrócie",
+    "p1": "Chalet la Falaise to wszechstronny dom, który idealnie nadaje się zarówno na krótkie, jak i dłuższe pobyty. Antresola może służyć jako plac zabaw dla dzieci. Zmodernizowane łazienki podkreślają funkcjonalność, a przestrzeń mieszkalna oferuje przytulny komfort. Położony z dala od zgiełku pieszej wioski, chalet znajduje się jednak blisko udogodnień w pobliżu Starej Wioski.",
+    "p2": "Nasz wygodny dom z trzema sypialniami znajduje się przy wiejskiej drodze, ale w odległości spaceru od sklepów i restauracji Starej Wioski. 200 m do przystanku miejskiego autobusu lub pięć minut jazdy (4 km) do stoków narciarskich (południowa strona). Jest dostęp do jeziora Moore. Domek jest też w pobliżu ścieżek rowerowych, szlaków przyrodniczych i lodowiska.",
+    "p3": "Duży taras wyposażony jest w grill i stół dla ośmiu osób (tylko latem). Masz dostęp do zamykanego, małego szopa na zewnątrz, idealnego do przechowywania sprzętu sportowego. Chalet la Falaise jest własnością rodzinną. Pary będą cieszyć się romantycznymi wyjazdami, a dla dwóch rodzin przygotowano wystarczającą ilość wygód."
+  },
+  "propertydetails": {
+    "title": "Szczegóły nieruchomości",
+    "subtitle": "Zbudowany w 2000 roku, nasz chalet posiada podłogi z drewna w dolnym poziomie i śródziemnomorskie akcenty w łazienkach. 130 m² powierzchni mieszkalnej rozłożone są na dwóch piętrach."
+  },
+  "layoutinfo": {
+    "title": "Układ",
+    "items": {
+      "lower": {
+        "label": "Dolny poziom",
+        "description": "Przestronna, w pełni wyposażona kuchnia, jadalnia połączona z salonem, sypialnia gościnna i pełna łazienka"
+      },
+      "upper": {
+        "label": "Górny poziom",
+        "description": "Loft, sypialnia główna, pokój dziecięcy i pełna łazienka"
+      },
+      "ceiling": "Sufit katedralny obejmuje dwa piętra"
+    }
+  },
+  "classification": {
+    "superhost": {
+      "title": "Superhost",
+      "description": "Superhost. Właściciele Chalet la Falaise posiadają odznaczenie “Superhost” przyznane przez platformę Airbnb. Superhostowie to doświadczeni gospodarze zapewniający swoim gościom wyjątkową obsługę."
+    },
+    "certificate": {
+      "title": "Certyfikat prowincji Québec",
+      "description": "Certyfikat klasyfikacji. Chalet la Falaise posiada akredytację od Corporation de l’industrie touristique du Québec (CITQ). Nasz chalet został certyfikowany jako „dom turystyczny” przez CITQ (Nr 296435)."
+    }
+  },
+  "rates": {
+    "title": "Cennik",
+    "labels": {
+      "weekend": "Noc w weekend",
+      "weeknight": "Noc w tygodniu",
+      "week": "Tydzień",
+      "month": "Miesiąc"
+    },
+    "spring": { "title": "Sezon wiosenny" },
+    "summer": { "title": "Sezon letni" },
+    "autumn": { "title": "Sezon jesienny" },
+    "ski": { "title": "Sezon narciarski", "duration": "Pięć miesięcy" }
+  },
+  "testimonials": {
+    "title": "Co mówią nasi goście",
+    "items": [
+      {
+        "quote": "Chalet la Falaise przerósł wszystkie nasze oczekiwania! Lokalizacja jest idealna, blisko wszystkiego, a jednocześnie spokojna. Nasza rodzina spędziła tu wspaniałe ferie zimowe.",
+        "name": "Sarah Johnson",
+        "location": "Boston, MA"
+      },
+      {
+        "quote": "Piękna nieruchomość z oszałamiającymi widokami. Antresola była idealna dla naszych dzieci, a kuchnia miała wszystko, czego potrzebowaliśmy. Na pewno wrócimy!",
+        "name": "Marc Dubois",
+        "location": "Montreal, QC"
+      },
+      {
+        "quote": "Ukryty skarb w Mont-Tremblant! Spacer do Starej Wioski był cudowny, a dostęp do jeziora Moore był dodatkowym atutem. Gorąco polecamy parom i rodzinom.",
+        "name": "Emily Chen",
+        "location": "Toronto, ON"
+      },
+      {
+        "quote": "Chalet był nieskazitelny i dobrze utrzymany. Idealny na nasz wyjazd narciarski – tylko 5 minut do stoków! Taras był świetny na poranną kawę.",
+        "name": "David Martinez",
+        "location": "New York, NY"
+      },
+      {
+        "quote": "Uwielbialiśmy autentyczny francusko-kanadyjski urok. Sufit katedralny jest przepiękny, a łóżka bardzo wygodne. Już planujemy nasz kolejny pobyt!",
+        "name": "Lisa Anderson",
+        "location": "Chicago, IL"
+      },
+      {
+        "quote": "Świetny stosunek jakości do ceny. Szop na zewnątrz był idealny do przechowywania naszego sprzętu narciarskiego, a lokalizacja nie do pobicia. Właściciele byli bardzo pomocni.",
+        "name": "Pierre Lefebvre",
+        "location": "Quebec City, QC"
+      }
+    ]
+  },
+  "aboutOwners": {
+    "title": "O właścicielach",
+    "imageAlt": "Właściciele",
+    "paragraphs": [
+      "Jesteśmy rodziną z historią zamieszkania po obu stronach Atlantyku, sięgającą kilku dekad. Nasza miłość do aktywności na świeżym powietrzu (piesze wycieczki, rowery, kajaki, narty, snowboard lub tenis) znajduje odzwierciedlenie w sprzęcie, który przechowujemy w naszych domach. Podobnie nasza pasja do gotowania odbija się w bogato wyposażonych kuchniach. Praktyczne kroki, które podjęliśmy, aby sprzęt był pod ręką, powinny wzbogacić Wasze wizyty. Wszystkie trzy lokalizacje oferują liczne zajęcia kulturalne w pomieszczeniach przez cały rok. Planujcie więc swoje wizyty odpowiednio. Mamy nadzieję, że pobyt tutaj sprawi Wam tyle przyjemności, co nam."
+    ]
+  },
+  "contactForm": {
+    "title": "Skontaktuj się z nami",
+    "subtitle": "Zainteresowany? Chętnie Cię usłyszymy.",
+    "firstName": "Imię",
+    "lastName": "Nazwisko",
+    "email": "E-mail",
+    "phone": "Telefon",
+    "message": "Wiadomość",
+    "submit": "Wyślij",
+    "success": "Wiadomość wysłana! Skontaktuję się z Tobą wkrótce.",
+    "error": "Coś poszło nie tak. Spróbuj ponownie później."
+  },
+  "availabilitycalendar": {
+    "lang": "pl"
   }
 }
